add "Yu Gothic"

--- a/style.css
+++ b/style.css
@@ -14,17 +14,16 @@ This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
 */
 
-@import url('../twentythirteen/style.css');
-
 /*font*/
 
 body, button, input, select, textarea {
-	font: 16px/1.6 “ヒラギノ角ゴ Pro W3″, “Hiragino Kaku Gothic Pro”, メイリオ, Meiryo, Osaka,“ＭＳ Ｐゴシック”, “MS PGothic”, sans-serif;
+	font: 16px/1.6 "游ゴシック", "Yu Gothic", YuGothic, 'ヒラギノ角ゴ Pro W3', "Hiragino Kaku Gothic Pro", "Meiryo", Meiryo, sans-serif;
+	font-weight: 500;
 	color: #3E3E3E;
 }
 
 h1,h2,h3,h4,h5,h6{
-	font-family:“ヒラギノ角ゴ Pro W3″, “Hiragino Kaku Gothic Pro”, メイリオ, Meiryo, Osaka,“ＭＳ Ｐゴシック”, “MS PGothic”, sans-serif;
+	font-family:"游ゴシック", "Yu Gothic", YuGothic, “ヒラギノ角ゴ Pro W3″, “Hiragino Kaku Gothic Pro”, メイリオ, Meiryo, Osaka,“ＭＳ Ｐゴシック”, “MS PGothic”, sans-serif;
 }
 
 h1{
